--- a/src/assets/css/selects.css
+++ b/src/assets/css/selects.css
@@ -7,3 +7,31 @@
     font-size: 0.875rem;
     color: #8898aa;
 }
+
+.assistance-input{
+    background-color: #e9ecef;
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 1.25rem + 2px);
+    padding: 0.625rem 0.75rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #8898aa;
+    background-clip: padding-box;
+    border-radius: 0.375rem;
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
+
+.not-selectble{
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
