--- a/src/assets/scss/argon-dashboard/custom/cards/_card-profile.scss
+++ b/src/assets/scss/argon-dashboard/custom/cards/_card-profile.scss
@@ -36,7 +36,9 @@
     position: relative;
 
     img {
-        max-width: 180px;
+        width: 180px;
+        height: 180px;
+        object-fit: cover;
         border-radius: $border-radius;
         @extend .shadow;
         transform: translate(-50%,-30%);
