--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -354,3 +354,64 @@
   
  }
 
+ .input-image-rectangle-container{
+  cursor: pointer;
+  width: 100%;
+  height: 150px;
+}
+
+.input-image-rectangle{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.selectable-row{
+  cursor: pointer;
+}
+
+.selectable-row:hover{
+  background-color: rgb(243, 243, 243);
+}
+
+.stepper-number{
+  user-select: none;
+}
+
+.sn-incomplete{
+  background-color: #bcbcbc;
+}
+
+.stepper-line{
+  margin: auto 0;
+  height: 3px;
+  width: 100px;
+}
+
+.sl-selected{
+  background-color:var(--primary);
+}
+
+.sl-not-selected{
+  background-color:#e8e8e8;
+}
+
+.container-img-curso{
+  
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.container-img-curso img{
+  position: relative;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.container-img-curso button{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
